more setup for frontend

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,10 +5,10 @@
     <div class="sign-in">
       <form method="post" class="form-signin">
         <label for="username" class="sr-only"><b>Username</b></label>
-        <input type="text" class="form-control" placeholder="Enter Github Username" name="username" required>
+        <input class="form-control" placeholder="Github Username" name="username" required>
 
         <label for="password" class="sr-only"><b>Password</b></label>
-        <input type="password" class="form-control" placeholder="Enter Github Password" name="psw" required>
+        <input class="form-control" placeholder="Github Password" name="psw" required>
 
         <button class="btn btn-lg btn-primary btn-block github-signin" type="submit">Login</button>
       </form>
