--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -7,15 +7,23 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/layout.css') }}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles/layout.css') }}">
+    {% block css %}{% endblock %}
     <title>{% block title %}{% endblock %} - Triple Tail</title>
   </head>
   
   <body class="black">
-  <button class="btn-clear" style="font-size: 30px;">💡</button>  
-    
-    <!-- Insert header design here! -->
-
+	<div class="header w-75 row">
+      <div class="navbar-brand logo align-content-center col-8">
+		<h2>Triple Tail</h2>
+      </div>
+      <div class="col-4">
+  	    <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+	</div>
+	<button class="btn-clear" style="font-size: 30px;">💡</button> 
     <section class="content">
       <header>
         {% block header %}{% endblock %}
