--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="container">
+  <div class="container-fluid w-75">
     <div class="sign-in">
       <form method="post" class="form-signin">
         <label for="username" class="sr-only"><b>Username</b></label>
