--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -19,11 +19,16 @@
 		<h2>Triple Tail</h2>
       </div>
       <div class="col-4">
-  	    <i class="fab fa-facebook-f"></i>
-        <i class="fab fa-twitter"></i>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        <button class="btn-clear" style="font-size: 20px;">💡</button> 
+        </div>
       </div>
 	</div>
-	<button class="btn-clear" style="font-size: 30px;">💡</button> 
     <section class="content">
       <header>
         {% block header %}{% endblock %}
