--- a/backend/templates/ranking.html
+++ b/backend/templates/ranking.html
@@ -5,19 +5,51 @@
 
 {% block content %}
 
-  <div class="front-side card my-card">
-    <img class="user-image" src="{{ url_for('static', filename='images/image.png') }}" alt="Card image">
-    <div class="front-side-body">
-      <h4 class="display-4">USERNAME HERE</h4>
-      <ul>
-      	<li>INSERT LIST HERE</li>
-	<li>Listttt</li>
-      </ul>
+  <div id="card-1" class="card card-rotating text-center flipped">
+
+    <!-- Front Side -->
+    <div class="face front">
+
+      <!-- Avatar -->
+      <div class="avatar mx-auto white"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle"
+          alt="Sample avatar image.">
+      </div>
+
+      <!-- Content -->
+      <div class="card-body">
+        <h4 class="font-weight-bold mb-3">Marie Johnson</h4>
+        <p class="font-weight-bold blue-text">Web developer</p>
+        
+	<i class="fas fa-presription-bottle-alt"></i>
+	<!-- Triggering button -->
+        <div style="cursor: pointer" id="rotatefront">
+	  <a class="rotate-btn" data-card="card-1"><i class="fas fa-redo-alt"></i> Click here to see your ranking!</a>
+	</div>
+      </div>
     </div>
+    <!-- Front Side -->
+
+    <!-- Back Side -->
+    <div class="face back">
+      <div class="card-body">
+
+        <!-- Content -->
+        <h4 class="font-weight-bold mb-0">About This Rank</h4>
+        <hr>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat tenetur odio suscipit non commodi vel
+          eius veniam maxime?
+          <div style="cursor: pointer" id="rotateback">
+	    <a class="rotate-btn" data-card="card-1"><i class="fas fa-undo"></i>Back to Profile</a>
+	  </div>
+      </div>
+    </div>
+    <!-- Back Side -->
+
   </div>
 
 {% endblock %}
 
-{% block js %}
+{% block script %}
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/ranking.js') }}"></script>
 {% endblock %}
