--- a/backend/static/styles/layout.css
+++ b/backend/static/styles/layout.css
@@ -1,3 +1,8 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -30,7 +35,7 @@ body.blue {
 
 .content {
   display: flex;
-  align-items: center;
   justify-content: center;
   width: 100%;
+  height: 85%;
 }
