--- a/backend/static/styles/ranking.css
+++ b/backend/static/styles/ranking.css
@@ -31,13 +31,14 @@
 }
 
 .front {
+  position: relative;
 }
 
 .back {
   position: absolute;
   left: 0;
   top: 0%;
-  width: auto;
+  width: 100%;
   height: 100%;
 }
 
@@ -47,6 +48,8 @@
 
 .card-body {
   padding: 1rem;
+  width: 100%;
+  height: 100%;
 }
 
 .rotate-button {
@@ -54,4 +57,17 @@
   bottom: 2%;
   transform: translate(-50%, -50%);
   left: 50%;
+}
+
+.avatar-git {
+  height: 40%;
+}
+
+.avatar-animal {
+  height: 60%;
+}
+
+.img {
+  max-height: 100%;
+  max-width: 100%;
 }
