--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -8,7 +8,7 @@
         <input class="form-control" placeholder="Github Username" name="username" required>
 
         <label for="password" class="sr-only"><b>Password</b></label>
-        <input class="form-control" placeholder="Github Password" name="psw" required>
+        <input type="password" class="form-control" placeholder="Github Password" name="password" required>
 
         <button class="btn btn-lg btn-primary btn-block github-signin" type="submit">Login</button>
       </form>
