added logo for login page

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
+{% block css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
+{% endblock %}
 
 {% block content %}
   <div class="container-fluid w-75">
+   <h1 id="logo">
+    <a> <img src="/static/images/clogo.png" alt="cropped logo" /></a>
+    </h1> 
     <div class="sign-in">
       <form method="post" class="form-signin">
         <label for="username" class="sr-only"><b>Username</b></label>
