--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -22,8 +22,16 @@
         <div class="row">
           <div class="col"></div>
           <div class="col">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
+            <div class="facebook button">
+              <a href="http://fb.me/TheTripletail">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </div>
+            <div class="twitter button">
+              <a href="https://twitter.com/_Tripletail">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
           </div>
         <button class="btn-clear" style="font-size: 20px;">💡</button> 
         </div>
