links is open in new tabs; buttons are in line

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -22,13 +22,13 @@
         <div class="row">
           <div class="col"></div>
           <div class="col">
-            <div class="facebook button">
-              <a href="http://fb.me/TheTripletail">
+            <div class="facebook-button">
+              <a href="http://fb.me/TheTripletail" target="_blank">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </div>
-            <div class="twitter button">
-              <a href="https://twitter.com/_Tripletail">
+            <div class="twitter-button">
+              <a href="https://twitter.com/_Tripletail" target="_blank">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>
