added additional description for rankings

--- a/backend/templates/ranking.html
+++ b/backend/templates/ranking.html
@@ -45,15 +45,15 @@
         <hr>
 	<h6 class="font-weight-bold mb-0">Time Complexity</h6>
 	  <p>O(log(n))</p>
-        <p>Elephant</p>
-
+        <p>Mediocrity is the elephant in the room</p>
+        
       {% else %}
         <div class="avatar-animal mx-auto white"><img class="img" src="{{ url_for('static', filename='images/lion.png') }}"></div>
         <h4 class="font-weight-bold mb-0">Rank</h4>
         <hr>
 	<h6 class="font-weight-bold mb-0">Time Complexity</h6>
 	  <p>O(1))</p>
-        <p>Superstar!</p>
+        <p>Long live the king</p>
       {% endif %}
       	
         <!-- Content -->
