--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -47,6 +47,8 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src= "https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous" type="type/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" type="text/javascript"></script>
+	<script
+src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" type="text/javascript"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='scripts/design.js') }}"></script>
     {% block script %}{% endblock %}
