--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -11,8 +11,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/layout.css') }}" type="text/css">
     {% block css %}{% endblock %}
     <title>{% block title %}{% endblock %} - Triple Tail</title>
-  </head>
-  
+  </head>  
   <body class="black">
 	<div class="header w-75 row">
       <div class="navbar-brand logo align-content-center col-8">
@@ -20,7 +19,7 @@
       </div>
       <div class="col-4">
         <div class="row">
-          <div class="col"></div>
+          {% block log_out %}{% endblock %}
           <div class="col">
             <div class="facebook-button">
               <a href="http://fb.me/TheTripletail" target="_blank">
