--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -14,7 +14,7 @@
   </head>  
   <body class="black">
 	<div class="header w-75 row">
-      <div class="navbar-brand logo align-content-center col-8">
+      <div class="navbar-brand logo align-content-center col-8 logo-corner">
 		<h2>Triple Tail</h2>
       </div>
       <div class="col-4">
