--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,7 +2,7 @@
 {% block css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
 {% endblock %}
-
+{% block title %}Login{% endblock %}
 {% block content %}
   <div class="container-fluid w-75">
    <h1 id="logo">
