--- a/backend/templates/ranking.html
+++ b/backend/templates/ranking.html
@@ -25,6 +25,7 @@
         <p><b>Username:</b> {{ userinfo.username }}</p>
 	<p><b>Public Repos:</b> {{ userinfo.public_repos }}</p>
 	<p><b>Followers:</b> {{ userinfo.followers }}</p>
+	<p><b>Commits:</b> {{ userinfo.commits }}</p>
 	<p><b>Hireable:</b> {{ userinfo.hireable }}</p>
 	<!-- Triggering button -->
         <div style="cursor: pointer" id="rotatefront" class="rotate-button">
