--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -10,13 +10,14 @@
     </h1> 
     <div class="sign-in">
       <form method="post" class="form-signin">
-        <label for="username" class="sr-only"><b>Username</b></label>
+        <!--label for="username" class="sr-only"><b>Username</b></label>
         <input class="form-control" placeholder="Github Username" name="username" required>
 
         <label for="password" class="sr-only"><b>Password</b></label>
-        <input type="password" class="form-control" placeholder="Github Password" name="password" required>
+        <input type="password" class="form-control" placeholder="Github Password" name="password" required-->
 
         <button class="btn btn-lg btn-primary btn-block github-signin" type="submit">Login</button>
+	<p style="color:white"><h2>Measure achievement, amplify potential.</h2> Secure metrics that quantify the capabilities of every software engineer on the planet. Helping the best software engineers get hired since 5:30pm on May 24th 2019.</p>
       </form>
     </div>
   </div>
